list UI complete

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <style>
+      .success,
+      .error {
+        color: white;
+        padding: 5px;
+        margin: 5px 0 15px 0;
+      }
+      .success {
+        background: green;
+      }
+      .error {
+        background: red;
+      }
+    </style>
     <title>BookList</title>
   </head>
   <body>
@@ -29,7 +43,27 @@
           <label for="title"> ISBN </label>
           <input type="text" id="isbn" class="u-full-width" />
         </div>
+        <div>
+          <input
+            type="submit"
+            value="Submit"
+            class="u-full-width button-primary"
+          />
+        </div>
       </form>
+
+      <table class="u-full-width">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Author</th>
+            <th>ISBN</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody id="book-list"></tbody>
+      </table>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
